# vcuda-controller

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: gmem.hpp  hijack.h  resource.hpp  resource_c_wrapper.hpp  rnode.hpp
src/: cuda_originals.c  hijack_call.c  loader.c  resource.cxx  resource_c_wrapper.cxx
